--- a/corporate.html
+++ b/corporate.html
@@ -170,22 +170,24 @@ body {font-size:16px;}
           <p id="production-1" class="mt-2">Design Elements</p>
           <ul>
             <li>
-              A colour scheme (with HTML colour codes, which must be consistent with your final website)
-              <em>&mdash; see the example below from the BUas brand book:</em>
+              Colour scheme:
               <ul class="list-unstyled">
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color:#75A3BF;"></span>
                   #75A3BF
-                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
+                  <p>The choice of blue as the primary color in the brand's color scheme aligns with the values of connection, simplicity, and solidarity. Blue is often associated with loyalty and security, creating a sense of trust and reliability for the target audience. Additionally, the color blue, resembling the sky and ocean, brings a feeling of stillness and calmness, which is essential for seniors who may experience feelings of isolation or disconnect. By using this blue color, we aim to inspire positivity and confidence in seniors while maintaining a connection to nature.</p>
                 </li>
                 <li>
                   <span class="border border-secondary rounded px-2 me-1" style="background-color:#D9B88F;"></span>
                   #D9B88F
-                  <em>Dark blue signifies&hellip;</em>
+                  <p>The Fellow beige chosen as a secondary color complements the primary blue color. It represents comfort and simplicity, which are key values for the brand. Being an earthy tone, it evokes stability and familiarity, further emphasizing the importance of building a reliable and inclusive community. The combination of blue and beige creates a harmonious and approachable visual experience for seniors, encouraging them to engage with the brand and its digital environment.</p>
                 </li>
               </ul>
             </li>
-            <li>Font choices</li>
+            <li>Font choices:</li>
+			  <h1>DM Serif Display</h1><p>The DM Serif Display font used for titles conveys a sense of class and a classic image. This choice resonates with our target audience and their familiarity with traditional design elements, creating a sense of trust and reliability.</p>
+			  <h2>Rubik</h2><p>The Rubik font, chosen for subtitles, represents a more subtle modern style. It invites the target audience to a world of simple curated technology, embracing the brand's value of making technology easy and accessible for seniors. The combination of classic and modern font choices creates a balanced and inclusive visual language that appeals to seniors while keeping them connected with contemporary design trends.</p>
+			  <h3>Noto Sans KR</h3><p>For the body font, Noto Sans KR was selected. It implies simplicity and stability, aligning with the brand's values. Its readability and straightforwardness ensure that the content is easily accessible and comprehensible for seniors, promoting a user-friendly experience.</p>
 			     <li>Please relate these elements to other units, for example:
               <ul>
                 <li>How does website design fit the <strong>values and personality of the brand</strong>?</li>
@@ -193,8 +195,9 @@ body {font-size:16px;}
                 <li>How does website design help showcase the <strong>unique value proposal of the product</strong>?</li>
               </ul>
             </li>
-            <li>User interface patterns (e.g. grids, carousels, menu organizations etc.)</li>
-            <li>The structure of the <strong>navigation and content</strong> (e.g. how content units are distributed across pages)</li>
+            <li>User interface pattern:</li>
+                 <p>To emphasize on our values of simplicity and connection, we did not make use of compelx interface patterns like carousels. Instead, we implemented a simple structure aand a permanent menu on the left side to facilitate navigation. We strive towards accessibility, by prioritizing a straightforward and intuitive user experience to ensure that seniors can easily navigate the digital environment, which ultimately contributes to their mental and emotional well-being.</p> </li>
+<li>The structure of the navigation and content <p>Staying along the lines of simplicity, we strived towards an easy and straightforward website.</p></li>
             <li>All these elements must be justified by referring to the theory <strong>and/or vocabulary</strong> of design</li>
             <li>Please relate these elements to other units, for example:
               <ul>
