--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@ body {font-size:16px;}
   
 	
   <!-- Services -->
-  <div class="w3-container" id="about" style="margin-top:75px">
+	 <br> <br>
+  <div class="w3-container" id="about" style="padding-left: 100">
     <h2 class="w3-xxxlarge bluefellow"><b>About Us</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
-    <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. The platform and device we created provides an easy and accessible way for seniors to connect with others. Our mission is to bridge the gap between loneliness and community. </p>
+    <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. Our mission is to bridge the gap between loneliness and community.  </p>
 	 <hr style="border:5px solid " id="vision" class="w3-round darkbeigefellow" >
 	  <center><h3>Vision</h3></center> 
-    <p>Our vision is to create a world where seniors can maintain their social connections and reconnect with their generation in a simple way. We believe that through these connections, they can preserve their mental and emotional well-being.
-    </p>
-	  <p><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
+   <p class="blocktext"><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
   </div>
+	  </div>
 	  <hr style="border:5px solid " id="values" class="w3-round darkbeigefellow" >
 	 <center> <h3 >Values</h3></center>
 	</div>
 
 		 <div class="w3-row-padding">
-    <div class="w3-half">
+    <div class="w3-half" >
       
  	 <center><p><b>Connection</b></p></center>
  	   <p align="justify">We believe that every senior should have access to meaningful connections. Our brand values the importance of human relationships and strives to provide an environment that fosters and maintains social connections.</p>
@@ -200,7 +200,7 @@ body {font-size:16px;}
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h2 class="w3-xxxlarge bluefellow"><b>Your Fellow Team</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
-    <p>The best team in the world.</p>
+    
     <p>Fellow started off as a small university project. Followed with enough passion, hard work and a wish to help out our elderly, we were able to produce GoldView, finally achieving a dream of respect towards the golden age. Five colleagues now turned friends have made this possible through teamwork and communication.
     </p>
     <p><b>Your Fellow Team was thoughtfully chosen</b>:</p>
