--- a/index.html
+++ b/index.html
@@ -73,15 +73,8 @@ body {font-size:16px;}
 
 	  <!-- Header -->
 
+	<img src="images/stock/lady.png" width="100%" alt="Fellow Title">
 
-<header class="headervideo" >
-  <video class="videovideo"  autoplay loop>
-      <source src="videos/facetime.mp4" type="video/mp4">
-      <!-- Provide alternative video formats here for compatibility -->
-    </video>
-</header>
-	
-<div class="headerfellow" id="fellow"></div>
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
   <!-- The HTML5 video element that will create the background video on the header -->
 	<div>
@@ -94,7 +87,7 @@ body {font-size:16px;}
 
 
 
-<hr style="height:100pt; visibility:hidden;" />
+
 	 <div class="w3-container" style="margin-top:80px" id="product">
     <h2 class="w3-xxxlarge bluefellow">Product</h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
@@ -109,14 +102,17 @@ body {font-size:16px;}
  <div class:"container" >
       <img class="round" src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
 	  </div>
-		
-		<p align="justify"><br><br> With an easy payment of EUR15/month, Fellow support staff will install GoldView at your home and walk you through the ease of use of our product. Next to our installation services, our support team is available 24/7 on GoldView to help you out with any issues or questions that may arise. Everything for your comfort </p>
+	
+		<p align="justify"><br><br>GoldView understands the significance of emotional connection and seeks to create an environment where sharing your thoughts, feelings, and experiences becomes effortless and enjoyable. Whether it's the joy of witnessing a grandchild's milestone, the comfort of confiding in a dear friend, or the excitement of meeting like-minded individuals, GoldView empowers you to express yourself authentically, fostering a sense of belonging and fulfillment in your golden years.</p>
+		<p align="justify"> With an easy payment of EUR15/month, Fellow support staff will install GoldView at your home and walk you through the ease of use of our product. Next to our installation services, our support team is available 24/7 on GoldView to help you out with any issues or questions that may arise. Everything for your comfort </p>
     </div>
 
     <div class="w3-half">
 		    <h2 class="beigefellow" align="center" style="font-size: 100px"> GoldView </h2>
 		<br>
-		<p align="justify">  GoldView is your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.</p> 
+		<p align="justify">  GoldView is not just a personal device; it's a gateway to deepening connections and sharing heartfelt emotions with your community and family. With just a simple click of a button, you can effortlessly reach out and connect with your loved ones, immersing yourself in meaningful conversations and capturing cherished moments.</p> 
+		<p>Designed to prioritize human connection, GoldView goes beyond conventional communication by offering curated video calls with new friends who perfectly align with your preferences, interests, and age. Whether you're discussing your favorite books with a fellow literature enthusiast, sharing gardening tips with a fellow green thumb, or reminiscing about past adventures with someone who shares your sense of wanderlust, each conversation is tailored to foster genuine connections and forge lasting bonds.</p>
+		<p align="justify">The sleek and straightforward design of GoldView enhances usability, eliminating the complexities that can often overwhelm the golden age on modern smartphones. Equipped with a convenient charging dock, this at-home screen ensures that you never miss a moment or struggle with technicalities. Simply place it on the dock, and it's ready to use, allowing you to focus on what truly matters—building meaningful relationships and exchanging emotions with the people who matter most.</p>
 		<br>
 		<br>
       <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView">
@@ -184,14 +180,14 @@ body {font-size:16px;}
     <div class="w3-half" >
       
  	 <center><p><b>Connection</b></p></center>
- 	   <p align="justify">We believe that every senior should have access to meaningful connections. Our brand values the importance of human relationships and strives to provide an environment that fosters and maintains social connections.</p>
-	 <center><p><b>Simplicity</b></p></center> <p align="justify"> We aim to make technology easy and accessible for seniors. Our brand values simplicity in all aspects of our product from the design to the user interface, to ensure that every user can easily connect with others.</p>
+ 	   <p align="justify">We value the importance of human relationships and strive for an environment that fosters and maintains meaningful social connections.</p>
+	 <center><p><b>Simplicity</b></p></center> <p align="justify">  We aim for an accessible environment with straightforward communication towards our customers.</p>
     </div>
 
     <div class="w3-half">
-   	<center><p><b>Community</b></p></center> <p align="justify">  We understand that community is crucial for a fulfilling life. Our brand values the importance of creating a sense of belonging and inclusivity for all seniors who use our product.
+   	<center><p><b>Community</b></p></center> <p align="justify">  We understand that community is crucial for a fulfilling life. We recognize the importance of creating a sense of belonging and inclusivity for all seniors.
 </p>
-		<center><p><b>Guidance</b></p></center> <p align="justify">We are committed to providing guidance and support to our users. Our brand values the importance of offering a helping hand to ensure that every user has a positive experience while using our product.</p>
+		<center><p><b>Solidarity</b></p></center> <p align="justify">We are committed to providing guidance and support. We value the awareness of being there for one another.</p>
     </div>
   </div>
 		
@@ -214,8 +210,8 @@ body {font-size:16px;}
         <img src="images/portrait/jisk.jpg" alt="John" style="width:100%">
         <div class="w3-container">
           <h2>Jiska van Hazendonk&nbsp;</h2>
-          <p class="w3-opacity">CEO Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p class="w3-opacity">Marketing&nbsp;</p>
+          <p> With a primary focus on marketing, Jiska excels at creating impactful communication plans and promotional materials. Collaborating with the team, he represents the brand and engages with the target audience in a meaningful way. By blending creativity and strategic thinking, Jiska ensures our brand remains dynamic and relevant, leaving a lasting impression on customers.</p>
         </div>
       </div>
     </div>
@@ -224,8 +220,8 @@ body {font-size:16px;}
         <img src="images/portrait/laur.jpg" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h2>Laure van Spijk&nbsp;</h2>
-          <p class="w3-opacity">Marketing&nbsp;</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p class="w3-opacity">Assistance&nbsp;</p>
+          <p>A valuable addition to the project who joined later and provided crucial support in various areas. With a versatile skill set and a willingness to lend a hand wherever needed, Laure has been instrumental in helping the team achieve their goals. Whether it's assisting with tasks, offering creative ideas, or providing support in different aspects of the project, Laure's contributions have made a significant impact.</p>
         </div>
       </div>
     </div>
@@ -235,7 +231,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Paul Bianchi</h2>
           <p class="w3-opacity">Programmer</p>
-          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience. His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.</p>
+          <p>A dedicated programmer who went above and beyond to learn programming skills specifically for Fellow. With a strong desire to provide guests with a seamless and accessible experience, Paul's passion for assisting others through user-friendly technology drives him to think innovatively. Always ready to push boundaries and think outside the box, Paul is committed to delivering an exceptional experience for Fellow's users.</p>
         </div>
       </div>
     </div>
@@ -248,7 +244,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Isalin Mulders&nbsp;</h2>
           <p class="w3-opacity">Content&nbsp;</p>
-          <p>As head of content, Isalin hopes to contribute to a friendlier world by spreading Fellow's message. Being there for others is what drives her everyday.</p>
+          <p>The Head of Content at Fellow, who aspires to create a friendlier world by spreading the message of the brand.  With a focus on crafting meaningful and engaging content, Isalin strives to connect with people and foster a sense of community. Her unwavering commitment to being there for others is the driving force behind her daily efforts.</p>
         </div>
       </div>
     </div>
@@ -297,12 +293,12 @@ body {font-size:16px;}
         </p>
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
-            <a href="https://www.facebook.com/bredauniversityas" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=100090366042405" target="_blank">
               <img class="m-2" src="images/facebook.svg" alt="Follow us on" width="26">
             </a>
           </li>
           <li>
-            <a href="https://www.youtube.com/BredaUniversityofAppliedSciences" target="_blank">
+            <a href="https://www.youtube.com/channel/UC36htFZNKogni20fn0zIdnw" target="_blank">
               <img class="m-2" src="images/youtube.svg" alt="Follow us on YouTube" width="26">
             </a>
           </li>
