--- a/corporate.html
+++ b/corporate.html
@@ -232,7 +232,10 @@ Educational level: Housekeeping school<br></p>
           <ul>
             <li>HTML templates: <a href="https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_interior_design&stacked=h" target="_blank">https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_interior_design&stacked=h</a> </li>
             <li>UX patterns: <a href="https://bbbootstrap.com/snippets/bootstrap-5-payment-form-gradient-button-91213875" target="_blank">https://bbbootstrap.com/snippets/bootstrap-5-payment-form-gradient-button-91213875</a> </li>
-            <li><strong>Images</strong> that were not produced by students themselves, including when crediting is not mandatory (in other words, we ask you to credit Unsplash images)</li>
+            <li><strong>Images:</strong> </li>
+			 <p> <a href="https://www.pexels.com/photo/cheerful-senior-mother-and-adult-daughter-using-smartphone-together-3791664/">https://www.pexels.com/photo/cheerful-senior-mother-and-adult-daughter-using-smartphone-together-3791664/ </a> 
+			 <p> <a href="https://www.pexels.com/video/elderly-woman-on-video-call-6873487/">https://www.pexels.com/video/elderly-woman-on-video-call-6873487/</a></p>
+			  <p> <a href="https://www.pexels.com/photo/people-sitting-on-a-sofa-7329701/">https://www.pexels.com/photo/people-sitting-on-a-sofa-7329701/</a></p>
           </ul>
           <h3 id="production-3" class="mt-2">Testing Report</h3>
           <p>This report outlines the testing goals and methods that were used to evaluate the performance and functionality of our website. The goal of the testing was to ensure that the website was reliable, efficient, and user-friendly, and to identify any issues that needed to be addressed before it was released to the market.</p>
