--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {font-size:16px;}
     <div class="w3-half">
       
  <div class:"container" >
-      <img class="round" src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+      <img class="round" src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="Product with charging station">
 	  </div>
 	
 		<p align="justify"><br><br>GoldView understands the significance of emotional connection and seeks to create an environment where sharing your thoughts, feelings, and experiences becomes effortless and enjoyable. Whether it's the joy of witnessing a grandchild's milestone, the comfort of confiding in a dear friend, or the excitement of meeting like-minded individuals, GoldView empowers you to express yourself authentically, fostering a sense of belonging and fulfillment in your golden years.</p>
@@ -115,8 +115,10 @@ body {font-size:16px;}
 		<p align="justify">The sleek and straightforward design of GoldView enhances usability, eliminating the complexities that can often overwhelm the golden age on modern smartphones. Equipped with a convenient charging dock, this at-home screen ensures that you never miss a moment or struggle with technicalities. Simply place it on the dock, and it's ready to use, allowing you to focus on what truly matters—building meaningful relationships and exchanging emotions with the people who matter most.</p>
 		<br>
 		<br>
+		
       <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView">
     </div>
+	  
 	  
   <div class="w3-container" id="pay" style="margin-top:75px"><br>
 	  <br>
@@ -162,8 +164,15 @@ body {font-size:16px;}
   
 	
   <!-- Services -->
-	 <br> <br>
-  <div class="w3-container" id="about" style="padding-left: 100">
+	 <br> 
+	   <div class="w3-row-padding">
+    <div class="w3-half">
+	  <img src="images/stock/sharing.jpeg" class=" round"  width="100%" alt="a younger person showing her phone to an elderly woman"><br></div>
+		<div class="w3-half">
+			<img src="images/stock/couch.jpeg" class="round" width="100%" alt="seniors on a couch">
+		   </div>
+		   
+  <div class="w3-container" id="about" style="padding-left: 100"><br><br>
     <h2 class="w3-xxxlarge bluefellow"><b>About Us</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
     <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. Our mission is to bridge the gap between loneliness and community.  </p>
