--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {font-size:16px;}
 		<br>
 		<br>
 		
-      <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView">
+      <img src="images/product/product.jpg" style="width:100%" class="round" onclick="onClick(this)" alt="GoldView">
     </div>
 	  
 	  
