--- a/corporate.html
+++ b/corporate.html
@@ -56,6 +56,7 @@ body {font-size:16px;}
   <div class="w3-bar-block">
     <a href="index.html#fellow" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Home</a> 
     <a href="#general" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">General&nbsp;</a> 
+	<a href="#content" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Content&nbsp;</a> 
     <a href="#production" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Production&nbsp;</a> 
     <a href="#marketing" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Marketing&nbsp;</a> 
     <a href="#management" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Management&nbsp;</a> 
