--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body {font-size:16px;}
     <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. Our mission is to bridge the gap between loneliness and community.  </p>
 	 <hr style="border:5px solid " id="vision" class="w3-round darkbeigefellow" >
 	  <center><h3>Vision</h3></center> 
-   <p class="blocktext"><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
+   <p class="blocktext" ><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
   </div>
 	  </div>
 	  <hr style="border:5px solid " id="values" class="w3-round darkbeigefellow" >
@@ -189,14 +189,14 @@ body {font-size:16px;}
     <div class="w3-half" >
       
  	 <center><p><b>Connection</b></p></center>
- 	   <p align="justify">We value the importance of human relationships and strive for an environment that fosters and maintains meaningful social connections.</p>
-	 <center><p><b>Simplicity</b></p></center> <p align="justify">  We aim for an accessible environment with straightforward communication towards our customers.</p>
+ 	   <p align="justify" class="blocktextsmall">We value the importance of human relationships and strive for an environment that fosters and maintains meaningful social connections.</p>
+	 <center><p><b>Simplicity</b></p></center> <p align="justify" class="blocktextsmall">  We aim for an accessible environment with straightforward communication towards our customers.</p>
     </div>
 
     <div class="w3-half">
-   	<center><p><b>Community</b></p></center> <p align="justify">  We understand that community is crucial for a fulfilling life. We recognize the importance of creating a sense of belonging and inclusivity for all seniors.
+   	<center><p><b>Community</b></p></center> <p align="justify" class="blocktextsmall">  We understand that community is crucial for a fulfilling life. We recognize the importance of creating a sense of belonging and inclusivity for all seniors.
 </p>
-		<center><p><b>Solidarity</b></p></center> <p align="justify">We are committed to providing guidance and support. We value the awareness of being there for one another.</p>
+		<center><p><b>Solidarity</b></p></center> <p align="justify" class="blocktextsmall">We are committed to providing guidance and support. We value the awareness of being there for one another.</p>
     </div>
   </div>
 		
